--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "genji"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,3 +10,4 @@ ab_glyph = "0.2.21"
 genji_macros = { path = "genji_macros" }
 glium = "0.32.1"
 image = "0.24.6"
+once_cell = "1.18.0"
