--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 ab_glyph = "0.2.21"
 genji_macros = { path = "genji_macros" }
 glium = "0.32.1"
+hecs = "0.10.3"
 image = "0.24.6"
 once_cell = "1.18.0"
