--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "genji"
-version = "0.5.2"
+version = "0.6.0"
 edition = "2021"
 
 license = "MIT"
@@ -11,4 +11,5 @@ genji_macros = { path = "genji_macros" }
 glium = "0.32.1"
 hecs = "0.10.3"
 image = "0.24.6"
+kira = "0.8.4"
 once_cell = "1.18.0"
