--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "genji"
-version = "0.6.0"
+version = "0.6.1"
 edition = "2021"
 
 license = "MIT"
@@ -13,3 +13,6 @@ hecs = "0.10.3"
 image = "0.24.6"
 kira = "0.8.4"
 once_cell = "1.18.0"
+
+[lib]
+doctest = false
